Social icon on mobile to align center, Fix bug resolve url for blog with other store

--- a/reactjs-pwa/packages/siminia/src/simi/App/Bianca/Footer/footer.scss
+++ b/reactjs-pwa/packages/siminia/src/simi/App/Bianca/Footer/footer.scss
@@ -339,9 +339,10 @@ $errorFormBgColor: #ece2e2;
             }
             .social-icon{
                 margin-bottom: 12px;
+                text-align: center;
             }
             span{
-                margin-right: 20px;
+                margin: 0 10px;
                 width: fit-content;
                 font-family: Simple-Line-Icons;
                 font-size: 16px;
